src/test/deca/context/invalid/sansObj/print-no-guill-right.deca
// Description:
//    Println sans le guillemet droit
//
// Résultat:
//token recognition error
//

{
        println("Hello, world!);
}